<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calcular3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblCalculo"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="#0B2161"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >

        <EditText
            android:id="@+id/txtNota1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="15dp"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/txtNota1"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/txtPeso1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="15dp"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/txtPeso1"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/txtNota2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="15dp"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/txtNota2"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/txtPeso2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="15dp"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/txtPeso2"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="">

        <EditText
            android:id="@+id/txtNota3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="15dp"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/txtNota3"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/txtPeso3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="15dp"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/txtPeso3"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/txtPromedio"
        android:gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:id="@+id/txtPromedio3"
        android:background="@drawable/bordes"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnCalcular3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/btnCalcularNota"
            android:textAllCaps="false"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnAtras3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:text="@string/btnAtrasTodo"
            android:textAllCaps="false"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnRegistrar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:text="@string/btnRegEst"
            android:textAllCaps="false"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>