<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AlarmaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_margin="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNotificaion"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#0B2161"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
        <EditText
            android:id="@+id/asunto"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/Asunto"
            android:gravity="center"
            android:background="@drawable/bordes"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/Detalle"
                android:id="@+id/detalle"
                android:gravity="center"
                android:background="@drawable/bordes"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_fecha"
                android:padding="5dp"
               android:gravity="center"
                android:layout_margin="20dp"
                android:textSize="20sp"
                android:hint="@string/FechaSeleccionada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:padding="10dp"
                android:id="@+id/btn_SelFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"
                android:text="@string/SeleccionarFecha"/>


        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tv_hora"
            android:padding="5dp"
            android:gravity="center"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:hint="@string/HoraSeleccionada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:padding="10dp"
            android:id="@+id/btn_SelHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:text="@string/SeleccionarHora"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">
            <Button
                android:id="@+id/btn_Guardar"
                android:padding="10dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:text="@string/GuardarNotificacion">
            </Button>
            <Button
                android:padding="10dp"
                android:id="@+id/btn_AtrasAlarma"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:text="@string/btnAtras">
            </Button>

        </LinearLayout>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>