<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegCurActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblRegCurso"
            android:textColor="#0B2161"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/regcursos">
        </ImageView>
    </LinearLayout>

        <EditText
            android:id="@+id/txtNomCurso"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:inputType="text"
            android:maxLength="30"
            android:hint="@string/txtNomCurso"
            android:background="@drawable/bordes"/>

        <EditText
            android:id="@+id/txtCicloCurso"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/txtCicloCurso"
            android:background="@drawable/bordes"/>

        <EditText
            android:id="@+id/txtNumCreditos"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:hint="@string/txtNumCreditos"
            android:background="@drawable/bordes"/>

        <EditText
            android:id="@+id/txtNomProfe"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:inputType="text"
            android:maxLength="40"
            android:hint="@string/txtNomProfe"
            android:background="@drawable/bordes"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">
            <Button
                android:id="@+id/btnRegistrarCurso"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:text="@string/btnRegEst">
            </Button>
            <Button
                android:id="@+id/btnAtrasCurso"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:text="@string/btnAtras">
            </Button>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>